--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -34,6 +34,9 @@
             </li>
         </ul>
     </div>
+    <a href="/admin/logout">
+        <button class="btn btn-light">注销</button>
+    </a>
 </nav>
 
 <div class="container">
