--- a/app/templates/template_msg.html
+++ b/app/templates/template_msg.html
@@ -9,15 +9,17 @@
         <th scope="col"># </th>
         <th scope="col">标题</th>
         <th scope="col">行业</th>
+        <th scope="col">订阅人数</th>
         <th scope="col">动作</th>
     </tr>
   </thead>
   <tbody>
-  {% for id, template in templates.items() %}
+  {% for template in templates %}
   <tr>
       <td>{{ loop.index|e }}</td>
       <td>{{ template.title|e }}</td>
       <td>{{ template.industry|e }}</td>
+      <td>{{ template.users|length }}</td>
       <td><a class="btn btn-sm btn-outline-info" href="/admin/template-message/task/{{ id }}" role="button">添加群发</a></td>
   </tr>
   {% endfor %}
