--- a/app/templates/template_msg_task_list.html
+++ b/app/templates/template_msg_task_list.html
@@ -61,8 +61,10 @@
 </table>
 
 <script>
-    $('.preview').popover({
-        trigger: 'hover'
+    $(document).ready(function() {
+        $('.preview').popover({
+            trigger: 'hover'
+        });
     });
 </script>
 {% endblock %}
