--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,20 +9,22 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.bootcss.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet">
     <link href="/static/style.css" rel="stylesheet">
+    <link href="https://cdn.bootcss.com/datatables/1.10.16/css/dataTables.bootstrap4.min.css" rel="stylesheet">
+
     <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.slim.min.js"></script>
-    <script src="https://cdn.bootcss.com/popper.js/1.14.3/umd/popper.min.js"></script>
-    <script src="https://cdn.bootcss.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+
 
     <title>天门气象公众号管理系统-{% block title %}{% endblock %}</title>
 </head>
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">天门气象公众号管理系统</a>
+    <a class="navbar-brand" href="/admin">天门气象公众号管理系统</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+
+    <div class="collapse navbar-collapse">
         <ul class="navbar-nav">
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -32,6 +34,9 @@
                     <a class="dropdown-item" href="/admin/template-message">消息管理</a>
                     <a class="dropdown-item" href="/admin/template-message/task">群发任务</a>
                 </div>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/admin/users">粉丝列表</a>
             </li>
         </ul>
     </div>
@@ -44,6 +49,11 @@
     {% block main %}
     {% endblock %}
 </div>
+
+<script src="https://cdn.bootcss.com/popper.js/1.14.3/umd/popper.min.js"></script>
+<script src="https://cdn.bootcss.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+<script src="https://cdn.bootcss.com/datatables/1.10.13/js/jquery.dataTables.min.js"></script>
+<script src="https://cdn.bootcss.com/datatables/1.10.16/js/dataTables.bootstrap4.min.js"></script>
 
 </body>
 </html>
