--- a/app/templates/template_msg_task.html
+++ b/app/templates/template_msg_task.html
@@ -32,15 +32,17 @@
     <button class="btn btn-primary btn-lg" type="submit">提交群发任务</button>
 </form>
 <script>
-    function example() {
-        $('#example').html(
-            $('#example').attr('data-content')
-            {% for key in keys %}
-            .replace('{{ '{{' }}{{ key }}.DATA{{ '}}' }}', $('#{{ key }}').val())
-            {% endfor %}
-        );
-    }
-    example();
-    $('input').keyup(example);
+    $(document).ready(function() {
+        function example() {
+            $('#example').html(
+                $('#example').attr('data-content')
+                {% for key in keys %}
+                .replace('{{ '{{' }}{{ key }}.DATA{{ '}}' }}', $('#{{ key }}').val())
+                {% endfor %}
+            );
+        }
+        example();
+        $('input').keyup(example);
+    });
 </script>
 {% endblock %}
