--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,4 +1,6 @@
 {% set TEMPLATE_MSG_PREPARE, TEMPLATE_MSG_SENDING, TEMPLATE_MSG_SENT = range(3) %}
+{% set TEMPLATE_ARG_TEXT, TEMPLATE_ARG_DATETIME, TEMPLATE_ARG_SELECT = range(3) %}
+
 <!doctype html>
 <html lang="zh_CN">
 <head>
@@ -7,10 +9,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.bootcss.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet">
     <link href="/static/style.css" rel="stylesheet">
+    <link href="https://cdn.bootcss.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.bootcss.com/datatables/1.10.16/css/dataTables.bootstrap4.min.css" rel="stylesheet">
-
+    <link href="https://cdn.bootcss.com/jquery-datetimepicker/2.5.20/jquery.datetimepicker.min.css" rel="stylesheet">
     <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.slim.min.js"></script>
 
 
@@ -54,6 +56,7 @@
 <script src="https://cdn.bootcss.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 <script src="https://cdn.bootcss.com/datatables/1.10.13/js/jquery.dataTables.min.js"></script>
 <script src="https://cdn.bootcss.com/datatables/1.10.16/js/dataTables.bootstrap4.min.js"></script>
+<script src="https://cdn.bootcss.com/jquery-datetimepicker/2.5.20/jquery.datetimepicker.full.min.js"></script>
 
 </body>
 </html>
