--- a/app/templates/users_list.html
+++ b/app/templates/users_list.html
@@ -16,7 +16,7 @@
     {% endif %}
 </h1>
 
-<table class="table table-bordered text-center" id="users_list">
+<table class="table table-bordered text-center" id="users-list">
     <thead>
     <tr>
         <th scope="col"># </th>
@@ -49,7 +49,7 @@
 
 <script>
     $(document).ready(function() {
-        $('#users_list').DataTable({
+        $('#users-list').DataTable({
             stateSave: true,
         });
     } );
