--- a/app/templates/template_msg_task.html
+++ b/app/templates/template_msg_task.html
@@ -20,17 +20,62 @@
 <form method="post" acthon="#">
     <div class="form-group row">
         {% for key in keys %}
-        <label for="{{ key }}" class="col-sm-1 col-form-label mb-1">{{ key }}</label>
+        <label for="{{ key }}" class="col-sm-1 col-form-label mb-1">
+            {% if config and key in config and 'name' in config[key] and config[key]['name'] %}
+            {{ config[key]['name'] }}
+            {% else %}
+            {{ key }}
+            {% endif %}
+        </label>
         <div class="col-sm-11">
-            <input type="text" name="{{ key }}"
-                   class="form-control" id="{{ key }}"
-                   placeholder="请输入{{ key }}内容..."
-            {% if data %}value="{{ data[key]['value'] }}"{% endif %}>
+            {% if config and key in config and 'type' in config[key] and config[key]['type'] %}
+                {% if config[key]['type'] == TEMPLATE_ARG_SELECT|string %} {# 下拉框 #}
+                <select id="{{ key }}" class="form-control" name="{{ key }}">
+                    {{ config[key]['value']|template_arg_select|safe }}
+                </select>
+                {% if data %}
+                    <script>
+                        $('#{{ key }}').val('{{ data[key]['value']|e }}');
+                    </script>
+                {% endif %}
+                {% else %} {# 文本 #}
+                <input type="text" name="{{ key }}"
+                       class="form-control" id="{{ key }}"
+                       placeholder="请输入内容..."
+                       value="{% if data %}{{ data[key]['value']|e}}{% else %}{{ config[key]['value']|e }}{% endif %}"
+                >
+                    {% if config[key]['type'] == TEMPLATE_ARG_DATETIME|string %} {# 日期时间 #}
+                        <script>
+                            $(document).ready(function() {
+                                $('#{{ key }}').datetimepicker({
+                                    format: 'Y年m月d日H时i分',
+                                    {% if not data %}
+                                    value: new Date(),
+                                    {% endif %}
+                                    step: 1
+                                });
+                            });
+                        </script>
+                    {% endif %}
+                {% endif %}
+
+            {% elif data %}
+                <input type="text" name="{{ key }}"
+                       class="form-control" id="{{ key }}"
+                       placeholder="请输入内容..."
+                value="{{ data[key]['value'] }}">
+            {% else %}
+                <input type="text" name="{{ key }}"
+                       class="form-control" id="{{ key }}"
+                       placeholder="请输入内容..."
+                       >
+            {% endif %}
         </div>
         {% endfor %}
     </div>
     <button class="btn btn-primary btn-lg" type="submit">提交群发任务</button>
 </form>
+
 <script>
     $(document).ready(function() {
         function example() {
@@ -43,6 +88,7 @@
         }
         example();
         $('input').keyup(example);
+        $.datetimepicker.setLocale('zh');
     });
 </script>
 {% endblock %}
