hide template content

--- a/app/templates/template_msg_config.html
+++ b/app/templates/template_msg_config.html
@@ -6,9 +6,9 @@
 <table class="table">
     <tbody>
     <tr>
-        <td>标题</td><td>{{ template.title|e }}</td>
+        <td style="width: 16.66%">标题</td><td>{{ template.title|e }}</td>
     </tr><tr>
-        <td>详细内容</td><td>{{ template.content|nl2br|safe }}</td>
+        <td style="width: 16.66%">详细内容</td><td>{{ template.content|nl2br|safe }}</td>
     </tr>
     </tbody>
 </table>
